# ros_pytorch_yolov5

./: CMakeLists.txt  How_to_build_and_run.md  README.md  detect_forcompare.py  package.xml
launch/: detector.launch
yolov5/: detect.py  requirements.txt
yolov5/utils/: general.py  plots.py
yolov5/weights/: download_weights.sh
