<?xml version="1.0"?>
<package format="2">
  <name>yolov5_torch_ros</name>
  <version>0.1.0</version>
  <description>The YOLOv5 PyTorch ROS wrapper package</description>

  <maintainer email="jiuerrose@outlook.com">Xuhui Kang</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
